k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dp
  namespace: app
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
      - name: otus-hw
        image: kali7va/otus-hw:0.2
        ports:
        - containerPort: 8000
