k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  selector:
    env: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
